# OmniSelect-Benchmark

./: .gitignore  BENCHMARK.md  BENCHMARK_zh.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  runall.sh
baselines/: README.md
data/: README.md
docs/: ARTIFACTS_INDEX.md  CONTRIBUTING_DATASETS.md  README.md  REPRODUCIBILITY.md  THEORY.md  aaai_adversarial_review.md  aaai_numeric_exceptions_register.md  ablation_master.md  architecture.md  backfill_norms_audit_round.md  baseline_fidelity_ledger.md  ccs_anchor_protocol.md  chinese_latex_post_0714_redline.md  claim_evidence_matrix.json  code_signal_diagnosis.md  codex_takeover_20260716.md  controller_reval_v5_changed19_classification.md  cross_modal_story.md  dataset_provenance.md  figure_prompts_for_aaai.md  final_3seed_results.txt  frozen_baseline_fidelity_gates.md  full_paper_coverage_ledger.md  master_coverage_matrix.md  method_v2_diagnostic.md  method_v2_negatives.md  negative_result_grpo_search.md  negative_result_recent_val.md  negative_result_robust_adjudication.md  per_modality_experiment_plan.md  pilot_results.md  published_method_fidelity_gate.md  quadmix_styleproxy_invalidation.md  reproduce.md  results_schema.json  scaleup_design.json  theory_v2.md  theory_v3_additions.md  theory_v4_additions.md  theory_v5_grpo.md  (+2 more)
environment/: constraints-cu128.txt  pip_freeze_server_vgpu.txt
experiments/: BASELINE_DATASET_AUDIT.md  BASELINE_FIDELITY_AUDIT.md  PAPER_UPDATE_DRAFT.md  POST_DATA_LOCK_inventory.json  README.md  README_defensibility.md  SERVER_PLAN.md  canonical_tables.json  canonical_tables_seed0.json  ccs_anchor_canonical.json  ccs_anchor_log_excerpt.txt  ccs_anchor_stage_exits.txt  characteristic_metrics_v2.json  characteristic_metrics_v3.json  characteristic_metrics_v4.json  characteristic_metrics_v5.json  controller_current_canonical_v5.json  downstream_gain_table.json  downstream_gain_table.md  (+11 more)
(+352 files in other folders)
